# wizards-bot

./: Cargo.toml  README.md  test.ts
src/: bushfire.rs  datastore.rs  home.html  index.tsx  main.rs  not_found.html  style.css  url.ts
