[package]
name = "wizards-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
form_urlencoded = "1.0.1"
json = "0.12.4"
signal-hook = "0.3.14"
tiny_http = "0.11.0"
once_cell = "1.13.0"
regex = { version = "1.6.0", default-features = false, features = ["std"] }
url = "2.2.2"
