[package]
name = "wizards-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
form_urlencoded = "1.2.1"
json = "0.12.4"
once_cell = "1.19.0"
regex = { version = "1.10.4", default-features = false, features = ["std"] }
roxmltree = "0.19.0"
signal-hook = "0.3.17"
time = { version = "0.3.36", features = ["parsing", "formatting"] }
tiny_http = "0.12.0"
ureq = { version = "2.9.6" }
url = "2.5.0"
